23_IOT/p2/deployment/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app2-volume
          mountPath: /usr/share/nginx/html
        volumes:
        - name: app2-volume
          hostPath:
            path: /vagrant/apps/app2
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
